--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"mdsvex": "^0.9.8",
+		"micromark": "^3.0.9",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.42.6",
@@ -29,8 +30,5 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-node": "^1.0.0-next.0"
-	}
+	"type": "module"
 }
