--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ node_modules
 /build
 /.svelte-kit
 /package
-/static/assets/g
-/.netlify
 .env
-
-# Local Netlify folder
-.netlify
+.env.*
+!.env.example
