--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "micromark": "^3.0.10"
+  }
 }
