--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^2.0.1",
+    "@astrojs/svelte": "^3.1.0",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.9.2",
+    "svelte": "^4.0.0",
     "tailwindcss": "^3.0.24"
   }
 }
