--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^3.0.5",
+    "netlify-cli": "^16.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "svelte": "^4.0.0",
