--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "madeby.pub",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/cloudflare": "^7.0.2",
-    "@astrojs/mdx": "^1.0.0",
-    "@astrojs/react": "^3.0.1",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/svelte": "^4.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "astro": "^3.0.5",
-    "netlify-cli": "^16.3.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "svelte": "^4.0.0",
-    "tailwindcss": "^3.0.24"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
-  }
+	"name": "madeby.pub",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/cloudflare": "^7.0.2",
+		"@astrojs/mdx": "^1.0.0",
+		"@astrojs/react": "^3.0.1",
+		"@astrojs/rss": "^3.0.0",
+		"@astrojs/sitemap": "^3.0.0",
+		"@astrojs/svelte": "^4.0.0",
+		"@astrojs/tailwind": "^5.0.0",
+		"@types/react": "^18.0.21",
+		"@types/react-dom": "^18.0.6",
+		"astro": "^3.0.5",
+		"netlify-cli": "^16.3.1",
+		"prettier-plugin-svelte": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.4",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"svelte": "^4.0.0",
+		"tailwindcss": "^3.0.24"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"prettier": "^3.0.3",
+		"prettier-plugin-astro": "^0.12.0"
+	}
 }
