--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
 		"astro": "^3.0.5",
+		"chroma-js": "^2.4.2",
 		"netlify-cli": "^16.3.1",
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
