--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/svelte": "^5.0.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@nanostores/persistent": "^0.9.1",
     "astro": "^4.0.8",
     "nanostores": "^0.9.5",
     "svelte": "^4.2.8",
