--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nanostores": "^0.9.5",
     "svelte": "^4.2.8",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
